# pool-heating-42sp

./: CMakeLists.txt  main.c
include/: C00_output_looping.h  C01_pointers_memory_access.h  C02_string.h  C03_string_memory.h  C04_base_conversion.h
src/: C00_output_looping.c  C01_pointers_memory_access.c  C02_string.c  C03_string_memory.c  C04_base_conversion.c
